Fix xpath for clicking first results
Updated xpath for result list after searching for criteria
Added configuration for Screenshots
Split manual from automated test cases in the repo

--- a/serenity.properties
+++ b/serenity.properties
@@ -4,7 +4,7 @@ webdriver.base.url=https://www.google.com
 
 #serenity.requirements.dir=src/test/resources/features
 
-#serenity.take.screenshots = BEFORE_AND_AFTER_EACH_STEP
+serenity.take.screenshots = BEFORE_AND_AFTER_EACH_STEP
 #serenity.keep.unscaled.screenshots = true
 serenity.browser.maximized=true
 #serenity.console.colors = true
