Add support for firefox execution

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,6 @@
 webdriver.driver=chrome
-webdriver.chrome.driver=driver/chromedriver.exe
+webdriver.chrome.driver=driver/chrome/chromedriver.exe
+webdriver.gecko.driver=driver/firefox/geckodriver.exe
 webdriver.base.url=https://www.google.com
 
 #serenity.requirements.dir=src/test/resources/features
